<resources>
    <string name="app_name" translatable="false">ValleyProHealth</string>
    <string name="call_directions">Call a location</string>
    <string name="call_location_bloom" translatable="false">Bloomingdale</string>
    <string name="call_location_cay"   translatable="false">Cayuga</string>
    <string name="call_location_clint" translatable="false">Clinton</string>
    <string name="call_location_craw"  translatable="false">Crawfordsville</string>
    <string name="call_location_terre" translatable="false">Terre Haute</string>
    <string name="call_location_msbhc" translatable="false">MSBHC</string>
    <string name="call_location">\@drawable/call_site_off</string>
    <string name="toast_call_bloom">Calling Bloomingdale Location…</string>
    <string name="toast_call_cay">Calling Cayuga Location…</string>
    <string name="toast_call_clint">Calling Clinton Location…</string>
    <string name="toast_call_craw">Calling Crawfordsville Location…</string>
    <string name="toast_call_rock">Calling Rockville Location…</string>
    <string name="toast_call_terre">Calling Terre Haute Location…</string>
    <string name="toast_call_MSBHC">Calling MSBHC…</string>
    <string name="toast_call_perm">Call permissions not enabled</string>
    <string name="title_faqs" translatable="false">FAQs</string>
    <string-array name="faqs_categories">
        <item>Select a category</item>
        <item>Billing/Insurance</item>
        <item>Miscellaneous</item>
        <item>New Patients</item>
        <item>Services</item>
    </string-array>
    <string-array name="faqs_newpat">
        <item>Are you accepting new patients?</item>
        <item>To find out if one of our locations is accepting new patients please give us a call and we will be glad to assist you. The contact information for all of our clinics is available in the locations section of this app.</item>

        <item>How soon will I be able to schedule my first appointment?</item>
        <item>New patient appointments can be scheduled as soon as two weeks. In the mean time we will send you paperwork to be completed and brought in on the day of your appointment.</item>

        <item>What do I need to bring to my first appointment?</item>
        <item>For your first appointment, you should bring your completed new patient paperwork, along with your driver\'s license and insurance information. When you arrive, the front office will make a copy of your medical insurance card and verify that your account information is up-to-date. A nurse will complete your medical history after you have been checked in, but please bring any relevant medical information, including all names and dosages of prescriptions and over-the-counter medications that you are currently taking.</item>

        <item>Can I make an appointment with a Behavioral Health counselor?</item>
        <item>If you are an established patient, speak with your Primary Care Provider about referring you to a Valley Professionals Behavioral Health counselor.</item>

        <item>Do you offer prenatal services?</item>
        <item>Prenatal services, as well as, Labor and Delivery are available at our Terre Haute clinic by referral. For more information, or to make an appointment, contact the Valley Professionals Community Health Center nearest you.</item>

        <item>Can I call and get information about my spouse/parent/adult/child (18+) or their medical records?</item>
        <item>The Health Insurance Portability and Accountability Act (HIPAA) prohibits us from sharing confidential patient health information without written authorization from the patient. If a patient would like to grant you permission to make an appointment for them or to access their medical records they must complete a Release of Information form, available in the forms section of this app.</item>

        <item>Can anyone else (i.e. grandparent, family friend, or childcare provider) bring my child to his or her appointment?</item>
        <item>Yes, you may grant permission for another person to bring your child to his or her appointment after you have completed and submitted a consent form available in the forms section of this app.</item>
    </string-array>
    <string-array name="faqs_bill">
        <item>What types of insurance do you accept?</item>
        <item>We accept all commercial insurance carriers, Medicare, and Medicaid.</item>

        <item>Can I be seen by a provider even if I do not have health insurance?</item>
        <item>Yes, Valley Professionals accepts self-pay, and also has a sliding-fee scale for eligible individuals.</item>

        <item>Can Valley Professionals help me enroll in health insurance coverage?</item>
        <item>Yes, our Community Health Workers are specially trained to help individuals find affordable health coverage. To make an appointment, contact the Valley Professionals Community Health Center nearest you.</item>

        <item>What do I need to bring to apply for sliding fee scale?</item>
        <item>To apply for sliding fee scale, patients and their families must provide the following documents to verify gross income: Most recent tax filing with the IRS and/or W2\'s from employer(s), A copy of Social Security or Disability Award Letter(s) or unemployment statement(s),Pay stubs from all employerers for the last 30-day period, If unemployed, no income, and living with others, we require a signed and dated letter from the person providing support of the patient, Driver\'s license, Any other income that is direct deposited. For more information on sliding fee scale, visit the patient resources section of this app.</item>

        <item>What if I am unable to pay my bill?</item>
        <item>If you unable to pay your bill, feel free to contact our Billing Department at (765) 828–1000 to set up a payment plan that works for you.</item>

        <item>What if I have other questions about billing?</item>
        <item>For all inquiries regarding billing, please contact our Billing Department at (765) 828–1000.</item>
    </string-array>
    <string-array name="faqs_services">
        <item>What can I do if I am unable to pay for my prescription?</item>
        <item>Valley Professionals has a 403(b) Prescription Assistance Program that can help eligible individuals to afford their medication.</item>

        <item>How long will it take for me to receive my prescription refill after I have submitted a request?</item>
        <item>Prescription refill requests can take up to 48 hours once submitted.</item>

        <item>Do I have to be a patient to use the After-Hours Clinic?</item>
        <item>No, you are not required to be a current Valley Professionals patient to utilize the After-Hours services.</item>

        <item>Do I need an appointment for the After-Hours clinic?</item>
        <item>No, After-Hours office visits are on a first-come, first-served basis.</item>

        <item>What can I be seen for at the After-Hours clinic?</item>
        <item>The After-Hours clinic is for acute conditions, such as, fever, vomiting, congestion, sore throat, flu symptoms, cough, rash, earache, or other similar symptoms.</item>

        <item>When is After-Hours clinic?</item>
        <item>The After-Hours clinic takes place Monday through Thursday from 5:00pm to 8:00pm at our Clinton location only.</item>

        <item>Does the Mobile School-Based Health Center offer school physical examinations?</item>
        <item>Yes.</item>

        <item>What types of services are available on the Mobile School-Based Health Center?</item>
        <item>Visit the MSBHC for: immunizations, school physicals, well child visits, cold, fever, vomiting, congestion, sore throat, flu symptoms, cough, rash, ear ache, and similar symptoms.</item>

        <item>Who can be seen on the Mobile Health Center?</item>
        <item>Students and Employees of a school hosting the Mobile Health Center may be seen. There are certain occasions during school breaks when the Mobile Health Center is open to the community. For more information, or to view the MSBHC\'s schedule, go to the tracker section of the app.</item>

        <item>What do I need to do for my child to be seen by the MSBHC?</item>
        <item>To enroll your child in MSBHC services, you must complete and submit the enrollment form found in the forms section. After you have done this, you may call the mobile unit and make an appointment, or your child can simply go to the school nurse and be referred.</item>

        <item>Does it count against my child\'s attendance when he or she is seen by the MSBHC?</item>
        <item>No, your child\'s visit to the MSBHC will not count against his or her attendance; moreover, if your child is sent home due to illness by an MSBHC provider, this absence would be certified excused.</item>

        <item>Does the MSBHC visit my school?</item>
        <item>The MSBHC visits schools in the North Vermillion, South Vermillion, Southwest Parke, and North Central Parke school corporations.</item>

        <item>How do I know when the MSBHC will be at my school?</item>
        <item>You can find a schedule for the MSBHC in the tracker section of this app.</item>

        <item>Do I have to be a patient to take part in the Diabetic Support Group?</item>
        <item>No, you do not have to register, make an appointment, or even be a patient of Valley Professionals to take part in the Diabetic Support Group.</item>
    </string-array>
    <string-array name="faqs_misc">
        <item>Is Valley Professionals hiring?</item>
        <item>Visit valleyprohealth.org/careers to view current job openings at Valley Professionals. You can get to the site by tapping the website button on the home screen.</item>
    </string-array>
    <string name="title_feedback">Feedback</string>
    <string name="menu_feedback">Feedback</string>
    <string name="feedback_playstore">If you like our app, please rate us on the Play Store</string>
    <string name="feedback_message">If you would us feedback, please send a message</string>
    <string name="feedback_message_dialog_title">Give Us Feedback</string>
    <string name="toast_feedback_send_message">Sending message…</string>
    <string name="toast_feedback_no_clients">There are no email clients installed.</string>
    <string name="toast_feedback_rate">Opening app page in Google Play Store</string>
    <string name="title_forms">Forms</string>
    <string-array name="forms_categories">
        <item>Select a category</item>
        <item>Consent</item>
        <item>New Patient</item>
        <item>Notice</item>
        <item>Sliding Fee Scale</item>
        <item>Student</item>
    </string-array>
    <string-array name="forms1">
        <item>Select a form</item>
        <item>Behavioral Health Release</item>
        <item>Minor Child</item>
        <item>Release of Information</item>
        <item>Release of Records</item>
        <item>Telemedicine</item>
    </string-array>
    <string-array name="forms2">
        <item>Select a form</item>
        <item>Adult</item>
        <item>Child</item>
    </string-array>
    <string-array name="forms3">
        <item>Select a form</item>
        <item>Acknowledgement of Bill of Rights</item>
        <item>Bill of Rights</item>
        <item>Privacy Practice</item>
    </string-array>
    <string name="icon_providers">Providers</string>
    <string name="icon_contact_us">Call</string>
    <string name="icon_locations">Locations</string>
    <string name="icon_forms">Forms</string>
    <string name="icon_patient_portal" translatable="false">Patient\nPortal</string>
    <string name="icon_bustracker">MSBHC\nTracker</string>
    <string name="icon_services">Services</string>
    <string name="icon_faq">FAQs</string>
    <string name="icon_patres">Patient\nResources</string>
</resources>