<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/buttonCallClose"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="end"
            android:src="@drawable/call_close"
            />
        <TextView
            android:id="@+id/callDirectionsText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/call_directions"
            android:textSize="22sp"
            />
    </LinearLayout>
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        grid:columnCount="2"
        grid:rowCount="5"
        grid:orientation="horizontal"
        grid:alignmentMode="alignBounds"
        android:layout_marginTop="50dp"
        android:id="@+id/homeGrid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_location_bloom"
            android:textSize="@dimen/call_location"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/buttonCallBloom"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/call_site"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_location_cay"
            android:textSize="@dimen/call_location"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/buttonCallCay"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/call_site"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_location_clint"
            android:textSize="@dimen/call_location"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/buttonCallClint"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/call_site"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_location_craw"
            android:textSize="@dimen/call_location"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/buttonCallCraw"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/call_site"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_location_terre"
            android:textSize="@dimen/call_location"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />
        <ImageView
            android:id="@+id/buttonCallTerre"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/call_site"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"
            />

        </android.support.v7.widget.GridLayout>
</RelativeLayout>