<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:grid="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/dialogTitleCall"

        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_bar"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/buttonCallClose"
            android:src="@drawable/close_dialog_state_list_drawable"

            android:layout_width="@dimen/dialog_close"
            android:layout_height="@dimen/dialog_close"
            android:layout_gravity="center"
            android:gravity="end"/>
        <TextView
            android:id="@+id/callDirectionsText"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="@color/white"
            android:text="@string/call_directions"
            android:textSize="@dimen/dialog_title"
            />
    </LinearLayout>
    <android.support.v7.widget.GridLayout
        android:id="@+id/homeGrid"

        grid:columnCount="2"
        grid:rowCount="5"
        grid:orientation="horizontal"
        grid:alignmentMode="alignBounds"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dialogTitleCall">

        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_bloom"
            android:textSize="@dimen/dialog_content"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/buttonCallBloom"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_cay"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_content"/>
        <ImageView
            android:id="@+id/buttonCallCay"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_clint"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_content"/>
        <ImageView
            android:id="@+id/buttonCallClint"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_craw"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_content" />
        <ImageView
            android:id="@+id/buttonCallCraw"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_terre"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_content" />
        <ImageView
            android:id="@+id/buttonCallTerre"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/call_location_msbhc"
            android:textColor="#000000"
            android:textSize="@dimen/dialog_content"/>
        <ImageView
            android:id="@+id/buttonCallMSBHC"
            android:src="@drawable/dial_state_list_drawable"

            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="center"

            android:layout_width="@dimen/call_button_width"
            android:layout_height="@dimen/call_button_height"/>

        </android.support.v7.widget.GridLayout>
</RelativeLayout>