<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarFeedback"

        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"

        android:background="?attr/colorPrimary"

        app:popupTheme="@style/AppTheme.PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar">
            <ImageView
                android:id="@+id/backButtonFeedback"
                android:src="@drawable/back_arrow_list_drawable"

                android:layout_width="@dimen/back_button"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/title_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="@string/title_feedback"
                    android:textSize="@dimen/title_bar_label"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.GridLayout
        app:columnCount="1"
        app:rowCount="4"
        app:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            app:layout_rowWeight=".5"
            app:layout_gravity="center"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"

            android:text="@string/feedback_playstore"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/feedbackRateButton"
            android:src="@drawable/rate_state_list_drawable"

            app:layout_gravity="center"
            app:layout_rowWeight=".5"

            android:layout_height="@dimen/main_icon_size"
            android:layout_width="@dimen/main_icon_size"/>
        <TextView
            app:layout_rowWeight=".5"
            app:layout_gravity="center"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"

            android:text="@string/feedback_message"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/feedbackMessageButton"
            android:src="@drawable/message_state_list_drawable"

            app:layout_gravity="center"
            app:layout_rowWeight=".5"

            android:layout_height="@dimen/main_icon_size"
            android:layout_width="@dimen/main_icon_size"/>
    </android.support.v7.widget.GridLayout>

</LinearLayout>
